--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
-
-<body>
-  Hello there, awesome person!
-</body>
+  <head>
+    <title>My first webpage</title>
+  </head>
+  <body>
+      Hello there, awesome person!
+  </body>
   
 </html>
